# turbojpeg-torch

./: LICENSE  MANIFEST.in  Makefile  README.md  bundle_libs.py  pyproject.toml  setup.py
turbojpeg/: __init__.py  turbojpeg.py
